ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/parserNotRegex1/input.ts.stderr
error[1108]: A 'return' statement can only be used within a function body.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/parserNotRegex1/input.ts:3:5
  |
3 |     return true;
  |     ^^^^^^^^^^^^

